# ATLAS-MemoryCore

./: .gitignore  CHANGELOG.md  DEVELOPMENT_STATUS.md  Dockerfile  FINAL_PRODUCTION_REPORT.md  INSTALL.md  LICENSE  PHASE2_COMPLETION.md  PHASE3_COMPLETION.md  PRODUCTION_DEPLOYMENT_REPORT.md  PROJECT_COMPLETION.md  PROJECT_STATUS_V6.2.md  PROJECT_SUMMARY.md  README.md  README_V6.md  SKILL.md  clean_config.yaml  create_openclaw_skill.py  deploy.sh  docker-compose.yml  docker-entrypoint.sh  final_test.py  integrate_prediction.py  mkdocs.yml  pyproject.toml  requirements.txt  run_e2e_test.py  simple_integrate.py  test_basic.py  test_final.py  test_integration.py  test_minimal.py  verify_core.py  verify_integration.py  verify_phase2.py  verify_phase3.py
.github/workflows/: publish.yml
.github/workflows_backup/: test.yml
benchmark/: README.md  benchmark_v6_vs_v6.2.py  results_20260505_105445.json  retrieval_comparison.py  run_benchmark.py
config/: aegis_config.yaml
deploy/: deploy_production.sh  production_config.yaml
docs/: AEGIS_CORTEX_V6.2.md  ARCHITECTURE_V3.md  design.md
examples/: basic_example.py
kubernetes/: deployment.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: aegis_cortex_v6.2.json
openclaw-plugin/: README.md  atlas_skill.py  index.js  openclaw.plugin.json
openclaw-plugin/archive/: index_v10.js  index_v11.js
qdrant_storage/: raft_state.json
qdrant_storage/collections/atlas_edit/0/: replica_state.json
qdrant_storage/collections/atlas_memories/0/: newest_clocks.json
scripts/: course_to_l1_pipeline.py  final_validation.py  final_verification.py  install.sh  migrate_v1_to_v2.js  quick_test.py  run_optimization.py  setup_cron.sh  setup_qdrant.sh  start_dev.sh  start_local_service.py  test_token_optimization.py  verify_optimization.py
setup/: SETUP.md  openclaw.template.json
src/: __init__.py  __main__.py
src/api/: server.py
src/core/: advanced_retrieval.py  aegis_config.py  aegis_orchestrator.py  config.py  embedding.py  embedding_v2.py  four_stage_filter.py  hierarchical_memory.py  lifecycle_manager.py  qdrant_storage.py  retrieval.py  scoring.py  storage.py  token_economy.py  turboquant_compressor.py
src/integration/: ecosystem.py  prediction_integration.py
src/optimization/: __init__.py  compressor.py  fusion_compressor.py  optimized_token_estimator.py  performance_optimizer.py  self_optimization.py  token_optimizer.py
src/prediction/: __init__.py  prediction_engine.py  qian_xuesen_knowledge.py
src/ui/: user_experience.py
tests/: integration_test.mjs  run_test.py  simple_test.py  test_aegis_integration.py  test_embedding.py  test_end_to_end_v6.2.py  test_integration_simple.py  test_phase2.py  test_phase3.py  test_retrieval.py  test_simple.py  test_working.py  verify_production.py
(+1 files in other folders)
