[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-memory-core"
version = "0.1.0"
description = "ATLAS Memory Core - Zero-Token intelligent memory system for OpenClaw"
readme = "README.md"
authors = [
    {name = "ATLAS", email = "atlas@openclaw.ai"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "memory", "vector-database", "qdrant", "openclaw", "ai-agent"]
dependencies = [
    "qdrant-client>=1.9.0",
    "sentence-transformers>=2.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "requests>=2.31.0",
    "tenacity>=8.2.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0",
    "pre-commit>=3.5.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/atlas-memory-core"
Documentation = "https://yourusername.github.io/atlas-memory-core/"
Repository = "https://github.com/yourusername/atlas-memory-core.git"
Issues = "https://github.com/yourusername/atlas-memory-core/issues"

[tool.setuptools]
packages = ["atlas_memory"]

[tool.setuptools.package-dir]
atlas_memory = "src"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=atlas_memory",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["atlas_memory"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]# 添加到 pyproject.toml 末尾

[project.scripts]
memory-optimize = "scripts.run_optimization:main"

